--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -19,11 +20,11 @@
     "firebase": "^9.22.0",
     "next": "13.4.2",
     "openai": "^3.2.1",
-    "postcss": "8.4.23",
+    "postcss": "^8.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "seedrandom": "^3.0.5",
-    "tailwindcss": "3.3.2",
+    "tailwindcss": "^4.1.17",
     "typescript": "5.0.4",
     "uuid": "^9.0.0"
   },
